2019-03-19 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/pdk.src/inst.cc:
	  Simulator fixes, patches by Nicolas Lesser.
	* sdas/aspdk15/pdk15mch.c:
	  Assembler fix, patch by Nicolas Lesser.

2019-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/gen.c: fix bug #2702
	* device/lib/_rrulonglong.c,
	* device/lib/_rrslonglong.c: fix bug #2704
	* support/regression/tests/longlong.c: re-enable tests for
	  hc08/s08/ds390, add more long long shifting tests
	* support/regression/tests/gcc-torture-execute-ashldi-1.c,
	* support/regression/tests/gcc-torture-execute-ashrdi-1.c,
	* support/regression/tests/gcc-torture-execute-divconst-3.c,
	* support/regression/tests/gcc-torture-execute-lshrdi-1.c,
	* support/regression/tests/gcc-torture-execute-vrp-7.c:
	  re-enable tests


2019-03-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Improve |=, &=, ^=.

2019-03-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc2.cc,
	  support/regression/tests/bug3564104.c:
	  Improve register allocation for shift and addition, RFE #608.
	* support/valdiag/valdiag.py,
	  support/valdiag/Makefile.in:
	  Enable testing of diagnostics for pdk14.

2019-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-20020508-2.c,
	  support/regression/tests/gcc-torture-execute-pr41750.c:
	  Improve register allocation, RFE #611, RFE #612, RFE #606.

2019-03-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/aclocal.m4,
	* sim/ucsim/configure.ac,
	* sim/ucsim/configure: reverting previous changes; go back to
	  using default C++ dialect instead of C++11

2019-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/ralloc2.cc,
	  src/pdk/gen.c,
	  support/regression/tests/gcc-torture-execute-pr70005.c:
	  Better register allocation for assignment, RFE #615, fix some bugs in code generation.
